# scuttle-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
cache/: opgg.py.db
entity/: entity.py
infra/: bot.py
service/: service.py
src/scuttle_bot/: __init__.py
src/scuttle_bot/analyzer/: match_analyzer.py
src/scuttle_bot/cache/: schema.sql  scuttle_bot.db
src/scuttle_bot/data/: build_champion_roles.py  collector.py  dataset.py  download_db.py  migrate_champion_idx_to_id.py  processor.py  run_collection.py
src/scuttle_bot/infra/: aws_client.py  db_client.py  match_participants_schema.sql  ml_schema.sql  schema.sql
src/scuttle_bot/llm/: llm.py  system_prompts.py
src/scuttle_bot/ml/: df_loader.py  feature_encoder.py  model.py  predictor.py
src/scuttle_bot/ml/logistic/: encoder.pkl  logistic_config.json  logistic_model.pkl  logistic_model.py  scaler.pkl  train.py
src/scuttle_bot/ml/logistic/models/: cv_summary.json
src/scuttle_bot/ml/logistic/models/A/: cv_summary.json  (+10 more)
src/scuttle_bot/ml/nn/: df_loader.py  nn_model.py  train.py
src/scuttle_bot/ml/nn/models/: cv_summary.json
src/scuttle_bot/ml/rf/: rf_model.py  train.py
src/scuttle_bot/ml/rf/models/: cv_summary.json
src/scuttle_bot/service/: bot.py  bot_utilities.py  llm.py  match_analyzer.py  personalities.py  personality_service.py  registration.py  reporter.py  riot_client.py  role_inference.py  schemas.py  service.py  summoner_profile.py  utilities.py
src/scuttle_bot/test/: e2e_chat_test.py
src/scuttle_bot/utilities/: bot_utilities.py  champion_roles.json  role_inference.py  utilities.py
(+106 files in other folders)
