[project]
name = "scuttle-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bigcoke1", email = "easonmeng@gmail.com" }
]
dependencies = [
    "dependency-injector>=4.48.2",
    "opgg-py>=2.0.4",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "schedule>=1.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scuttle_bot"]
